# FreshOn

./: .gitignore  CLAUDE.md  DEV.md  FreshOn.in — App Onboarding Splash.txt  FreshOn_Product_Categories_v3.xlsx  MOBILE_PERFORMANCE_GUIDE.md  Optimizing POS Returns Workflow.md  Readme.md  TODO.md  docker-compose.yml  freshon_ecosystem_analysis.md  kimi-export-b4da4c26-20260512-195044.md  package-lock.json  package.json
Consumer_app/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
Consumer_app/src-tauri/: Cargo.toml  tauri.conf.json
Consumer_app/src-tauri/capabilities/: default.json
Consumer_app/src-tauri/icons/: icon.icns
Consumer_app/src-tauri/src/: main.rs
Farm_app/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Fpick_app/: BACKEND_INTEGRATION.md  QUICKSTART.md  TAURI_SETUP.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Fpick_app/src-tauri/: Cargo.toml  tauri.conf.json
Fpick_app/src-tauri/capabilities/: default.json
Fpick_app/src-tauri/icons/: icon.icns
Fpick_app/src-tauri/src/: main.rs
Fpos/: .env.example  DESKTOP_BUILD_GUIDE.md  DESKTOP_QUICKSTART.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: ADDRESS_MANAGEMENT.md  AGENT_SYSTEM.md  API_DOCS.md  ARCHITECTURE_SDK.md  CASE_STUDY.md  CHANGELOG.md  CHECKOUT_PAYMENT_SETUP.md  DATABASE_SCHEMA.md  DELIVERY_APP_ACTION_GUIDE.md  DELIVERY_APP_CONNECTION_MAP.md  DELIVERY_APP_IMPLEMENTATION_REPORT.md  DEL_APP_ARCHITECTURE.md  DEL_APP_README.md  (+12 more)
(+199 files in other folders)
